[tool.poetry]
name = "nhsbt-import"
version = "0.1.0"
description = "Import script for NHSBT data"
authors = ["andyatterton <andrew.atterton@ukkidney.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nhsbt_import"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
